remove padding form table row, to avoid weird jump when scrolling

--- a/src/Table/table.css
+++ b/src/Table/table.css
@@ -21,6 +21,5 @@
 .dataTable .row
 {
     margin-right:   0;
-    padding-left:   0.5rem;
     padding-right:  1rem;
 }
